# esn

./: .gitignore  01_analyse_exploratoire.ipynb  02_modelisation.ipynb  README.md  main.py  note_ESN.docx  pyproject.toml
