[project]
name = "p4-esn-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "llvmlite>=0.42",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numba>=0.59",
    "numpy>=2.3.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "xgboost>=3.1.3",
]
